@@ -1,3 +1,10 @@
+2013-10-24  Julien Moutte <julien@fluendo.com>
+
+	* INSTALL: Updated.
+	* Makefile.am: Distribute spec file.
+	* configure.ac: Generate spec file.
+	* libfludownloader.spec.in: Add a spec file to build RPMs.
+
 2013-09-30  Release Maker <nomail@fluendo.com>
 
 	* configure.ac: Back to TRUNK.
